sample branch of a zeus deploy

--- a/script/releases/v0.1-eigenpod-example/.env.example
+++ b/script/releases/v0.1-eigenpod-example/.env.example
@@ -1,5 +1,5 @@
 ZEUS_DEPLOYED_ethPOS="0x4242424242424242424242424242424242424242"
-EIGENPOD_GENESIS_TIME="1695902400"
+ZEUS_ENV_EIGENPOD_GENESIS_TIME="1695902400"
 
 ZEUS_DEPLOYED_EigenPodManager_pendingImpl="0x10EBa780CCd9E5e9FFBe529C25046c076Be91048"
 ZEUS_DEPLOYED_OperationsMultisig="0xDA29BB71669f46F2a779b4b62f03644A84eE3479"
