--- a/.github/workflows/commit-linting.yml
+++ b/.github/workflows/commit-linting.yml
@@ -1,9 +1,13 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+  workflow_dispatch: {}
 
 jobs:
   commitlint:
+    name: Commit Linting
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
