--- a/.github/workflows/forge-coverage.yml
+++ b/.github/workflows/forge-coverage.yml
@@ -1,33 +1,25 @@
-name: Run Coverage
+name: CI
 
 on:
   push:
   workflow_dispatch: {}
 
 jobs:
-  prepare:
-    runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
   run-coverage:
-    needs: prepare
+    name: Coverage
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
 
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
     - name: Load issue number
       uses: actions/github-script@v6
       id: get_issue_number
       with:
         script: |
-          let issue_number;
-          // Attempt to find a pull request associated with the commit
           const pullRequests = await github.rest.repos.listPullRequestsAssociatedWithCommit({
             commit_sha: context.sha,
             owner: context.repo.owner,
@@ -35,37 +27,41 @@ jobs:
           });
 
           if (pullRequests.data.length > 0) {
-            issue_number = pullRequests.data[0].number;
+            return pullRequests.data[0].number;
           } else {
-            throw new Error('No associated issue or pull request found.');
+            throw new Error('No associated pull request found.');
           }
-          return issue_number;
         result-encoding: string
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Install lcov
+
+    - name: Install dependencies
       run: |
         sudo apt-get install lcov
       id: lcov
+
     - name: Install Foundry
       uses: foundry-rs/foundry-toolchain@v1
       with:
         version: nightly
+
     - name: Run coverage
-      run: forge coverage --report lcov
+      run: FOUNDRY_PROFILE=ci forge coverage --report lcov
       env:
         RPC_MAINNET: ${{ secrets.RPC_MAINNET }}
         RPC_HOLESKY: ${{ secrets.RPC_HOLESKY }}
+
     - name: Prune coverage report
       run: lcov --remove ./lcov.info -o ./lcov.info.pruned 'src/test/*' 'script/*' '*Storage.sol' --ignore-errors inconsistent
+
     - name: Generate reports
       run: genhtml -o report ./lcov.info.pruned
-    - name: Upload coverage results (s3 link here)
+
+    - name: Upload coverage results
       uses: actions/upload-artifact@v4
       with:
         name: code-coverage-report
         path: report/*
-    - name: View Coverage (text here)
+
+    - name: View and log coverage
       id: print_coverage
       run: |
         EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
