--- a/.github/workflows/storage-report.yml
+++ b/.github/workflows/storage-report.yml
@@ -1,12 +1,15 @@
-name: Check Storage Layout
+name: CI
+
 on:
   workflow_dispatch:
   pull_request:
   push:
     branches:
       - "dev"
+      
 jobs:
   check_storage:
+    name: Storage Layout
     runs-on: "ubuntu-latest"
     steps:
       - uses: actions/checkout@v4
